control/chameleon_zf90.F90


  interface
     function CHAMELEON_zlange_c(norm,M,N,A,LDA,work) &
          & bind(c, name='CHAMELEON_zlange')
       use iso_c_binding
       implicit none
       real(kind=c_double) :: CHAMELEON_zlange_c
       integer(kind=c_int), value :: norm
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: work
     end function CHAMELEON_zlange_c
  end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zlanhe_c(norm,uplo,N,A,LDA,work) &
          & bind(c, name='CHAMELEON_zlanhe')
       use iso_c_binding
       implicit none
       real(kind=c_double) :: CHAMELEON_zlanhe_c
       integer(kind=c_int), value :: norm
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: work
     end function CHAMELEON_zlanhe_c
  end interface
#endif

  interface
     function CHAMELEON_zlansy_c(norm,uplo,N,A,LDA,work) &
          & bind(c, name='CHAMELEON_zlansy')
       use iso_c_binding
       implicit none
       real(kind=c_double) :: CHAMELEON_zlansy_c
       integer(kind=c_int), value :: norm
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: work
     end function CHAMELEON_zlansy_c
  end interface

  interface
     function CHAMELEON_zlaset_c(uplo,M,N,alpha,beta,A,LDA) &
          & bind(c, name='CHAMELEON_zlaset')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlaset_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       complex(kind=c_double_complex), value :: alpha
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
     end function CHAMELEON_zlaset_c
  end interface

  interface
     function CHAMELEON_zlaswp_c(N,A,LDA,K1,K2,IPIV,INCX) &
          & bind(c, name='CHAMELEON_zlaswp')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlaswp_c
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       integer(kind=c_int), value :: K1
       integer(kind=c_int), value :: K2
       type(c_ptr), value :: IPIV
       integer(kind=c_int), value :: INCX
     end function CHAMELEON_zlaswp_c
  end interface

  interface
     function CHAMELEON_zlaswpc_c(N,A,LDA,K1,K2,IPIV,INCX) &
          & bind(c, name='CHAMELEON_zlaswpc')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlaswpc_c
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       integer(kind=c_int), value :: K1
       integer(kind=c_int), value :: K2
       type(c_ptr), value :: IPIV
       integer(kind=c_int), value :: INCX
     end function CHAMELEON_zlaswpc_c
  end interface

  interface
     function CHAMELEON_zlauum_c(uplo,N,A,LDA) &
          & bind(c, name='CHAMELEON_zlauum')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlauum_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
     end function CHAMELEON_zlauum_c
  end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zplghe_c(bump,uplo,N,A,LDA,seed) &
          & bind(c, name='CHAMELEON_zplghe')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zplghe_c
       real(kind=c_double), value :: bump
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       integer(kind=c_long_long), value :: seed
     end function CHAMELEON_zplghe_c
  end interface
#endif

  interface
     function CHAMELEON_zplgsy_c(bump,uplo,N,A,LDA,seed) &
          & bind(c, name='CHAMELEON_zplgsy')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zplgsy_c
       complex(kind=c_double_complex), value :: bump
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       integer(kind=c_long_long), value :: seed
     end function CHAMELEON_zplgsy_c
  end interface

  interface
     function CHAMELEON_zplrnt_c(M,N,A,LDA,seed) &
          & bind(c, name='CHAMELEON_zplrnt')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zplrnt_c
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       integer(kind=c_long_long), value :: seed
     end function CHAMELEON_zplrnt_c
  end interface

  interface
     function CHAMELEON_zplrnk_c(M,N,K,C,LDC,seedA,seedB) &
          & bind(c, name='CHAMELEON_zplrnk')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zplrnk_c
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: K
       type(c_ptr), value :: C
       integer(kind=c_int), value :: LDC
       integer(kind=c_long_long), value :: seedA
       integer(kind=c_long_long), value :: seedB
     end function CHAMELEON_zplrnk_c
  end interface

  interface
     function CHAMELEON_zposv_c(uplo,N,NRHS,A,LDA,B,LDB) &
          & bind(c, name='CHAMELEON_zposv')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zposv_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zposv_c
  end interface

  interface
     function CHAMELEON_zsysv_c(uplo,N,NRHS,A,LDA,B,LDB) &
          & bind(c, name='CHAMELEON_zsysv')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsysv_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zsysv_c
  end interface

  interface
     function CHAMELEON_zpotrf_c(uplo,N,A,LDA) &
          & bind(c, name='CHAMELEON_zpotrf')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zpotrf_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
     end function CHAMELEON_zpotrf_c
  end interface

  interface
     function CHAMELEON_zsytrf_c(uplo,N,A,LDA) &
          & bind(c, name='CHAMELEON_zsytrf')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsytrf_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
     end function CHAMELEON_zsytrf_c
  end interface

  interface
     function CHAMELEON_zpotri_c(uplo,N,A,LDA) &
          & bind(c, name='CHAMELEON_zpotri')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zpotri_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
     end function CHAMELEON_zpotri_c
  end interface

  interface
     function CHAMELEON_zpotrs_c(uplo,N,NRHS,A,LDA,B,LDB) &
          & bind(c, name='CHAMELEON_zpotrs')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zpotrs_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zpotrs_c
  end interface

  interface
     function CHAMELEON_zsytrs_c(uplo,N,NRHS,A,LDA,B,LDB) &
          & bind(c, name='CHAMELEON_zsytrs')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsytrs_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zsytrs_c
  end interface

  interface
     function CHAMELEON_zsymm_c(side,uplo,M,N,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='CHAMELEON_zsymm')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsymm_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
       integer(kind=c_int), value :: LDC
     end function CHAMELEON_zsymm_c
  end interface

  interface
     function CHAMELEON_zsyr2k_c(uplo,trans,N,K,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='CHAMELEON_zsyr2k')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsyr2k_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: trans
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: K
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
       integer(kind=c_int), value :: LDC
     end function CHAMELEON_zsyr2k_c
  end interface

  interface
     function CHAMELEON_zsyrk_c(uplo,trans,N,K,alpha,A,LDA,beta,C,LDC) &
          & bind(c, name='CHAMELEON_zsyrk')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsyrk_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: trans
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: K
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
       integer(kind=c_int), value :: LDC
     end function CHAMELEON_zsyrk_c
  end interface

  interface
     function CHAMELEON_ztrmm_c(side,uplo,transA,diag,N,NRHS,alpha,A,LDA,B,LDB) &
          & bind(c, name='CHAMELEON_ztrmm')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrmm_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: transA
       integer(kind=c_int), value :: diag
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_ztrmm_c
  end interface
